--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -228,8 +228,8 @@ main{
 .calculator{
     grid-area: calculator;
     margin: 10px;
-    background: rgb(245, 245, 105);
-    background-image: url(../img/background-yellow.jpeg);
+    background: $color_proteins;
+    
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -328,117 +328,6 @@ main{
     &:hover{
         background-color: $color_green_dark;
         transform: scale(1.08);
-    }
-}
-
-/*landing recipes---------------------------------*/
-
-.banner__recipes{
-    display: flex;
-    .title__lowcalories{
-        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/lowcalories-banner-recipes.jpeg);
-        background-size: cover;
-        background-repeat: no-repeat;
-        width: 50%;
-        height: 500px;
-        position: relative;
-        .title__text__recipes{
-            color: white;
-            font-size: 4rem;
-            font-weight: bolder;
-            font-family: 'Roboto';
-            text-align: center;
-            opacity: 1;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-    }
-    .title__highprotein{
-        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/highprotein-banner-recipes.jpeg);
-        background-size: cover;
-        background-repeat: no-repeat;
-        width: 50%;
-        height: 500px;
-        position: relative;
-        .title__text__recipes{
-            color: white;
-            font-size: 4rem;
-            font-weight: bolder;
-            font-family: 'Roboto';
-            text-align: center;
-            opacity: 1;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-    }
-    .title__lowfat{
-        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/lowfat-banner-recipes.jpeg);
-        background-size: cover;
-        background-repeat: no-repeat;
-        width: 50%;
-        height: 500px;
-        position: relative;
-        .title__text__recipes{
-            color: white;
-            font-size: 4rem;
-            font-weight: bolder;
-            font-family: 'Roboto';
-            text-align: center;
-            opacity: 1;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-    }
-    .text__recipes{
-        width: 50%;
-        height: 500px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: grey;
-        padding: 50px;
-        font-size: 1.2rem;
-        text-align: justify;
-    }
-}
-.recipes__cards__lowcalories{
-    padding: 70px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: whitesmoke;
-    div{
-        div{
-            .recipe-title{
-                font-weight: bold;
-                font-size: 1.2rem;
-            }
-        }
-    }
-}
-.check__also{
-    text-align: center;
-    padding: 20px;
-}
-.other__categories{
-    display: flex;
-    justify-content: center;
-    a{
-        .landing__recipes{
-            height: 250px;
-            width: 250px;
-            margin: 20px;
-            padding: 0px;
-            img{
-                width: 8rem;
-            }
-        }
     }
 }
 
@@ -641,6 +530,429 @@ div{
             font-size: 2rem;
             color: white;
             font-weight: 500;
+        }
+    }
+}
+
+/*main landing recipes---------------------------------*/
+
+.banner__recipes{
+    display: flex;
+    .title__lowcalories{
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/lowcalories-banner-recipes.jpeg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 50%;
+        height: 500px;
+        position: relative;
+        .title__text__recipes{
+            color: white;
+            font-size: 4rem;
+            font-weight: bolder;
+            font-family: 'Roboto';
+            text-align: center;
+            opacity: 1;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
+    .title__highprotein{
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/highprotein-banner-recipes.jpeg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 50%;
+        height: 500px;
+        position: relative;
+        .title__text__recipes{
+            color: white;
+            font-size: 4rem;
+            font-weight: bolder;
+            font-family: 'Roboto';
+            text-align: center;
+            opacity: 1;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
+    .title__lowfat{
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/lowfat-banner-recipes.jpeg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 50%;
+        height: 500px;
+        position: relative;
+        .title__text__recipes{
+            color: white;
+            font-size: 4rem;
+            font-weight: bolder;
+            font-family: 'Roboto';
+            text-align: center;
+            opacity: 1;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
+    .text__recipes{
+        width: 50%;
+        height: 500px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: grey;
+        padding: 50px;
+        font-size: 1.2rem;
+        text-align: justify;
+    }
+}
+.recipes__cards__lowcalories{
+    padding: 70px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: whitesmoke;
+    div{
+        div{
+            .recipe-title{
+                font-weight: bold;
+                font-size: 1.2rem;
+            }
+        }
+    }
+}
+.check__also{
+    text-align: center;
+    padding: 20px;
+}
+.other__categories{
+    display: flex;
+    justify-content: center;
+    a{
+        .landing__recipes{
+            height: 250px;
+            width: 250px;
+            margin: 20px;
+            padding: 0px;
+            img{
+                width: 8rem;
+            }
+        }
+    }
+}
+
+/*all landing recipes---------------------------------*/
+
+.mainRecipes{
+    width: 80%;
+    margin: auto;
+    .recipe__main__container{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 10px;
+        .recipe__picture{
+            width: 50%;
+            position: relative;
+            img{
+                width: 100%;
+            }
+            h3{
+                background-color: $color_green;
+                color: white;
+                font-size: 1rem;
+                font-weight: normal;
+                width: fit-content;
+                padding: 7px;
+                position: absolute;
+                top: 20%;
+                left: 20%;
+                transform: translate(-50%, -50%);
+            }
+        }
+        .recipe__title{
+            width: 50%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-end;
+            margin-bottom: 7px;
+            margin: 10px;
+            h2{
+                font-size: 3.5rem;
+                padding: 15px;
+                text-align: end;
+            }
+            h4{
+                font-size: 1rem;
+                padding: 5px;
+            }
+            p{
+                font-weight: lighter;
+                color: grey;
+                font-size: 1rem;
+                padding: 10px;
+                width: 100%;
+                text-align: justify;
+            }
+            a{
+                font-size: 0,7rem;
+                text-align: end;
+                font-style: italic;
+                color: black;
+                font-weight: 300;
+            }
+            .recipe__title__macros{
+                display: flex;
+                .recipe__protein{
+                    background-color: $color_proteins;
+                    padding: 12px;
+                    margin: 5px;
+                }
+                .recipe__carbs{
+                    background-color: $color_carbs;
+                    padding: 12px;
+                    margin: 5px;
+                }
+                .recipe__fats{
+                    background-color: $color_fats;
+                    padding: 12px;
+                    margin: 5px;
+                }
+            }
+        }
+    }
+    .recipe__primary__container{
+        display: flex;
+        background-color:whitesmoke;
+        height: 500px;
+        padding: 50px;
+        .ingredients{
+            width: 30%;
+            border: 1px solid grey;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            align-items: center;
+            margin: 15px;
+            overflow-y: scroll;
+            p{
+                font-style: italic;
+            }
+        }
+        .steps{
+            width: 70%;
+            margin: 15px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: justify;
+            overflow-y:scroll;
+            .shop-ingredient{
+                background-color: whitesmoke;
+                border: $color_green 1px solid;
+                padding: 10px;
+                margin: 15px;
+                text-align: center;
+                a{
+                    color: $color_green;
+                    text-decoration: none;
+                    font-size: 1rem;
+                    font-weight: bold;
+                    &:hover{
+                        color: grey;
+                    }
+                }
+
+
+            }
+        }
+    }
+    .recipe__secondary__container{
+        text-align: center;
+        margin: 30px;
+        a{
+            text-decoration: none;
+            background-color: $color_green;
+            color: white;
+            font-weight: 500;
+            font-size: 1.2rem;
+            padding: 10px;
+            &:hover{
+                background-color: white;
+                color: $color_green;
+            }
+        }
+    }
+    .recipe__third__container{
+        margin-bottom: 30px;
+        div{
+            h2{
+                text-align: center;
+                font-weight: lighter;
+                margin-top: 70px;
+            }
+        }
+        .recipe__options{
+            display: flex;
+            justify-content: center;
+            .recipe__option__1{
+                width: 50%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+                img{
+                    width: 80%;
+                    padding: 10px;
+                }
+                a{
+                    color: black;
+                }
+            }
+            .recipe__option__2{
+                width: 50%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+                img{
+                    width: 80%;
+                    padding: 10px;
+                }
+                a{
+                    color: black;
+                }
+            }
+        }
+    }
+}
+
+/*all landing shop------------------------------------*/
+
+.mainShop{
+    width: 80%;
+    margin: auto;
+    .basket__container{
+        display: flex;
+        justify-content: flex-end;
+        margin: 30px;
+        .basket__items{
+            display: flex;
+            width: fit-content;
+            padding: 10px;
+            border: black solid 0.5px;
+            border-radius: 5px;
+            p{
+                margin: 5px;
+            }
+            svg{
+                margin: 5px;
+            }
+        }   
+    }
+    .shop__main__container{
+        display: flex;
+        margin: 15px;
+        padding: 15px;
+        justify-content: space-around;
+        align-items: center;
+        .shop__picture{
+            width: 50%;
+            img{
+                width: 100%;
+            }
+        }
+        .shop__title{
+            width: 50%;
+            display: flex;
+            flex-direction: column;
+            padding: 30px;
+            align-items: flex-end;
+            text-align: justify;
+            p{
+                color: grey;
+            }
+            div{
+                .buy__now__style{
+                    background-color: yellow;
+                    padding: 15px;
+                    border: none;
+                    text-decoration: none;
+                    font-size: 1rem;
+                    color: black;
+                    font-weight: 600;
+                    &:hover{
+                        background-color: $color_purple;
+                        color: white;
+                    }
+                }
+            }
+        }
+        .shop__icons{
+            display: flex;
+            justify-content: flex-end;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            .heart,.cart,.share{
+                margin: 10px;
+            }
+        }
+    }
+    .shop__primary__container{
+        .product__description{
+            background-color: whitesmoke;
+            display: block; 
+            padding: 20px;
+            text-align: justify;
+        }
+    }
+    .shop__secondary__container{
+        margin-bottom: 50px;
+        .other__categorie__shop{
+            display: flex;
+            width: 100%;
+            .categorie_1{
+                width: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: flex-end;
+                flex-direction: column;
+                a{
+                    width: 70%;
+                    text-align: center;
+                    color: black;
+                    img{
+                        width: 50%;
+                        &:hover{
+                            opacity: 0.6;
+                        }
+                    }
+                }
+            }
+            .categorie_2{
+                width: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: flex-start;
+                flex-direction: column;
+                a{
+                    width: 50%;
+                    text-align:center;
+                    color: black;
+                    img{
+                        width: 70%;
+                        &:hover{
+                            opacity: 0.6;
+                        }
+                    }
+                }
+            }
         }
     }
 }
